# gormet

./: .gitignore  LICENSE  README.md  analytics.py  analytics.sh  create_db.py  fl_data_redemet.py  fl_defs.py  fl_metar_parser.py  fog_clustering.py  gm_db.py  gm_defs.py  gm_dirs.py  gor_db.py  gor_defs.py  gor_ia.py  gor_util.py  gorcap.py  gorfog.py  gorfog.sh  gormet.py  gormet.sh  pyproject.toml
.bkp/: gm_data_redemet.py
analytics/: ga_analise_contraste.py  ga_analise_textura.py  ga_filtro_alta_frequencia.py  ga_filtro_contraste.py  ga_modelo_cores.py
metar/cap/SBGR-28/: 20230525215503Zm.txt  20230525220003Zm.txt
