[tool.poetry]
name = "GORmet"
version = "0.1.0"
description = ""
authors = ["Milton Abrunhosa <ml_byteman@yahoo.com.br>"]

[tool.poetry.dependencies]
python = "^3.9"
PyAutoGUI = "^0.9.53"
pyscreenshot = "^3.1"
Pillow = "^9.5.0"
opencv-python = "^4.7.0"
requests = "^2.29.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
