[tool.poetry]
name = "GORmet"
version = "0.1.0"
description = ""
authors = ["Milton Abrunhosa <ml_byteman@yahoo.com.br>"]

[tool.poetry.dependencies]
python = "^3.9"
PyAutoGUI = "^0.9.53"
pyscreenshot = "^3.1"
Pillow = "^9.5.0"
opencv-python = "^4.7.0"
requests = "^2.29.0"
python-dotenv = "^1.0.0"
selenium = "^4.9.0"
webdriver-manager = "^3.8.6"
streamlink = "^5.4.0"
imutils = "^0.5.4"
numpy = "^1.24.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
